--- a/springboot-fix-protocol-consumer/src/main/resources/fixsession_acceptor.conf
+++ b/springboot-fix-protocol-consumer/src/main/resources/fixsession_acceptor.conf
@@ -4,15 +4,17 @@ FileLogPath=target/data/acceptor_log
 ConnectionType=acceptor
 StartTime=00:00:00
 EndTime=00:00:00
-HeartBtInt=30
 ResetOnLogon=Y
 ResetOnLogout=Y
 ResetOnDisconnect=Y
 SocketAcceptPort=9876
-UseDataDictionary=N
-BeginString=FIX.4.4
 SendRedundantResendRequests=N
+UseDataDictionary=Y
+DataDictionary=fix44.xml
 
 [session]
+BeginString=FIX.4.4
 SenderCompID=CONSUMER
 TargetCompID=PRODUCER
+HeartBtInt=30
+ValidateFieldsOutOfOrder=N
