Remoção do payload da controller e implementando o arquivo de dicionario de dados utilizado para definir os campos e valores possiveis para uma mensagem FIX.

--- a/springboot-fix-protocol-producer/src/main/resources/fixsession_initiator.conf
+++ b/springboot-fix-protocol-producer/src/main/resources/fixsession_initiator.conf
@@ -4,16 +4,19 @@ FileLogPath=target/data/initiator_log
 ConnectionType=initiator
 StartTime=00:00:00
 EndTime=00:00:00
-HeartBtInt=30
 SocketConnectPort=9876
 SocketConnectHost=localhost
-UseDataDictionary=N
 ResetOnLogon=Y
 ResetOnLogout=Y
 ResetOnDisconnect=Y
-BeginString=FIX.4.4
 SendRedundantResendRequests=N
+UseDataDictionary=Y
+DataDictionary=fix44.xml
+
 
 [session]
+BeginString=FIX.4.4
 SenderCompID=PRODUCER
 TargetCompID=CONSUMER
+HeartBtInt=30
+ValidateFieldsOutOfOrder=N
